---
title: edu.nust.game.systems
config:
  look: classic
  layout: dagre
  flowchart:
    curve: linear
  class:
    defaultRenderer: dagre-wrapper
---
classDiagram
class CollisionManager
class Audios
class AssetManager
class Asset
class MusicManager
class Damageable <<interface>>
class PathFinder
class ConcreteWall
class Score
class Damaging <<interface>>
class TilesetAsset <<enumeration>>
class EnemyAsset <<enumeration>>
class AssetEnum <<interface>>
class CharacterAsset <<enumeration>>
class MapNodeSetter
class Concrete <<interface>>
class AssetType <<enumeration>>
class Node
class HitBox
class PlayerSession
class WeaponAsset <<enumeration>>
Asset --> AssetType : uses
AssetEnum --> AssetType : uses
AssetManager ..> AssetEnum : uses
AssetManager --> AssetType : uses
AssetManager --> CharacterAsset : uses
AssetManager --> EnemyAsset : uses
AssetManager --> TilesetAsset : uses
Concrete --> HitBox : uses
ConcreteWall ..|> Concrete : implements
ConcreteWall --> HitBox : uses
Damageable --> HitBox : uses
Damaging --> HitBox : uses
MapNodeSetter --> Node : uses
PathFinder --> MapNodeSetter : uses
PathFinder --> Node : uses